--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:cypress:ci": "start-server-and-test dev http-get://localhost:3000 test:cypress"
   },
   "dependencies": {
+    "@fontsource/iosevka": "^4.5.2",
     "@fontsource/montserrat": "^4.5.1",
     "@fontsource/roboto": "^4.5.1",
     "@fontsource/roboto-mono": "^4.5.0",
